--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "web crawler",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "dev": "nodemon"
   },
   "keywords": [
     "nodejs",
@@ -14,18 +16,24 @@
   "author": "dnay2k@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.16.1",
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "iconv": "^2.3.2",
     "jsdom": "^13.2.0",
-    "signale": "^1.3.0",
-    "simplecrawler": "^1.1.6",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "qs": "^6.6.0",
+    "selenium-webdriver": "^4.0.0-alpha.1",
+    "signale": "^1.3.0"
   },
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "@types/jsdom": "^12.2.2",
+    "@types/qs": "^6.5.1",
+    "@types/selenium-webdriver": "^3.0.15",
     "@types/signale": "^1.2.0",
-    "ts-node": "^8.0.2"
+    "jest": "^24.1.0",
+    "nodemon": "^1.18.10",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3"
   }
 }
