--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "express": "^4.16.4",
     "iconv": "^2.3.2",
     "jsdom": "^13.2.0",
+    "opn": "^5.4.0",
     "qs": "^6.6.0",
     "signale": "^1.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/jsdom": "^12.2.2",
+    "@types/opn": "^5.1.0",
     "@types/qs": "^6.5.1",
     "@types/signale": "^1.2.0",
     "nodemon": "^1.18.10",
